Подключение api архивации проектов, улучшение ui (раскрывающиеся списки, сворачивание и разворачивание столбцов и дорожек на досках задач, карточки задач на досках и в бэклогах). Фикс адаптивов для мобильных устройств, рефакторинг кода
